erDiagram
  
  USER ||--|{ MEMBER              : is
  USER ||--|| MANAGER             : is
  USER ||--|| LENT                : has
  USER {
    uuid      uuid                PK
    string    username            UK
    string    name        
    string    surname
    string    email               UK
    password  password_hash
  }

  ASOCIATION }|--|{ MEMBER        : has
  ASOCIATION }|--|| MANAGER       : has
  ASOCIATION ||--|{ DOCUMENT      : keeps
  ASOCIATION }|--o{ ACTIVITY      : organizes
  ASOCIATION ||--|{ MATERIAL      : owns
  ASOCIATION ||--|| MEDIA         : logo
  ASOCIATION {
    uuid    uuid                  PK
    string  short_name
    string  long_name
    string  description
    json    info
  }
  
  MEMBER {
    bool isAccepted
    date acceptedDate
    date leavingDate
    enum isBoardMember            "false | board | vicechair | chair"
  }
  
  ACTIVITY ||--o{ MEDIA           : uses  
  ACTIVITY ||--o{ DOCUMENT        : links
  ACTIVITY {
    string  id                    PK
    string  name
    string  desc
    string  room
    date    initialDate
    bool    isMultiSession        "Other dates in `additionalInfo`"
    bool    isCreditable
    bool    isExternal
    bool    isRoomAccepted
    bool    isMediaAccepted
    bool    isActivityAccepted
    bool    isRegistrationNeeded
    enum    access                "public | members | board"
    json    additionalInfo
  }
  
  DOCUMENT {
    string  id                    PK
    string  name
    string  path
    date    creationDate
    bool    isCurrent
    bool    isImportant
    bool    isManagerAccessible
    bool    isPublicAccessible
  }

  MATERIAL ||--|| LENT : is
  MATERIAL {
    string  id                    PK
    string  name
    string  desc
    int     quantity
    bool    isLendable
  }

  LENT {
    date    dueDate
    int     quantity
  }

  MEDIA {
    string  id                    PK
    string  name
    string  kind
    string  path
  }

  MANAGER {
    string  name                  PK
    email   contactEmail
    email   adminEmail
    email   materialEmail
    email   printEmail
    email   commEmail
  }
